Add color for like button

--- a/elementCard.html
+++ b/elementCard.html
@@ -60,7 +60,7 @@
 
 				<div class="object__desc-name">
 					<div class="object__desc-title" data-card-square>Студия, %SQUARE% м2</div>
-					<div class="button-favourite">
+					<div class="button-favourite" data-card-like-element>
 						<i class="fas fa-heart"></i> В избранное
 					</div>
 				</div>
