--- a/elementCard.html
+++ b/elementCard.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Объект - магазин "Квадратный метр"</title>
+	<title>Main - shop "SQUARE METER"</title>
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
@@ -15,20 +15,20 @@
 
 	<div class="top-panel">
 		<div class="top-panel__container">
-			<div class="top-panel__title">интернет магазин недвижимости</div>
+			<div class="top-panel__title">real estate online store</div>
 			<div class="top-panel__phone"><a href="tel:+8800557755">8 (800) 55-77-55</a></div>
 		</div>
 	</div>
 
 	<div class="logo-wrapper">
 		<div class="logo">
-			<div class="logo__title">КВАДРАТНЫЙ МЕТР</div>
-			<div class="logo__subtitle">купить квартиру в один клик</div>
+			<div class="logo__title">SQUARE METER</div>
+			<div class="logo__subtitle">buy an apartment in one click</div>
 		</div>
 	</div>
 
 	<div class="container p-0" >
-		<div class="heading-1" data-card-title>Квартира Студия, %SQUARE% м2 за %PRICE% </div>
+		<div class="heading-1" data-card-title>Studio apartment, %SQUARE% м2 for %PRICE% </div>
 
 		<!-- object -->
 		<div class="object">
@@ -59,9 +59,9 @@
 			<div class="object__desc">
 
 				<div class="object__desc-name">
-					<div class="object__desc-title" data-card-square>Студия, %SQUARE% м2</div>
+					<div class="object__desc-title" data-card-square>Studio, %SQUARE% м2</div>
 					<div class="button-favourite" data-card-like-element>
-						<i class="fas fa-heart"></i> В избранное
+						<i class="fas fa-heart"></i> To favorits
 					</div>
 				</div>
 
@@ -70,19 +70,19 @@
 					<!-- params -->
 					<div class="params">
 						<div class="params__item">
-							<div class="params__definition" >Корпус</div>
+							<div class="params__definition" >Part</div>
 							<div class="params__value" data-card-corpus>%CORPUS%</div>
 						</div>
 						<div class="params__item">
-							<div class="params__definition" >Секция</div>
+							<div class="params__definition" >Section</div>
 							<div class="params__value" data-card-section>%SECTION%</div>
 						</div>
 						<div class="params__item">
-							<div class="params__definition" >Этаж</div>
+							<div class="params__definition" >Floor</div>
 							<div class="params__value" data-card-floor>%FLOOR%</div>
 						</div>
 						<div class="params__item">
-							<div class="params__definition">Номер</div>
+							<div class="params__definition">number</div>
 							<div class="params__value" data-card-number>%NUMBER%</div>
 						</div>
 					</div>
@@ -92,17 +92,17 @@
 
 				<div class="details">
 					<div class="details__row">
-						<div class="details__name">Стоимость</div>
+						<div class="details__name">Cost</div>
 						<div class="details__value details__value--price" data-card-price>%PRICE%</div>
 					</div>
 					<div class="details__row">
-						<div class="details__name">Цена за м2</div>
+						<div class="details__name">Price for м2</div>
 						<div class="details__value" data-card-price-per-square>%PRICE-PER-SQUARE% ₽/м2</div>
 					</div>
 				</div>
 
-				<div class="button-order">Забронировать</div>
-				<div class="button-preview">Записаться на просмотр</div>
+				<div class="button-order">Book now</div>
+				<div class="button-preview">Sign up for view</div>
 
 			</div>
 			<!-- // object__desc -->
@@ -113,7 +113,7 @@
 	</div>
 
 	<div class="container">
-		<div class="heading-slider">Галерея комплекса</div>
+		<div class="heading-slider">Complex Gallery</div>
 	</div>
 
 	<div class="slider">
@@ -131,12 +131,12 @@
 	</div>
 
 	<div class="container">
-		<a href="#" class="back-to-results">← Вернуться к результатам поиска</a>
+		<a href="#" class="back-to-results">← Back to search results</a>
 	</div>
 
 	<div class="footer">
 		<div class="contaier">
-			<p>Учебный проект школы <a href="https://webcademy.ru/">WebCademy</a> с курса <a href="https://webcademy.ru/jscourse/">JavaScript разработка</a>. Проект выполнил <a href="#">Сергей Васильев</a>.</p>
+			<p>Training project <a href="https://webcademy.ru/">WebCademy</a> from curs <a href="https://webcademy.ru/jscourse/">JavaScript developer</a>. Project completed <a href="#">Evgeny Bondar</a>.</p>
 		</div>
 	</div>
 
