--- a/elementCard.html
+++ b/elementCard.html
@@ -130,7 +130,7 @@
 		</div>
 	</div>
 
-	<div class="container">
+	<div class="container" data-button-back>
 		<a href="#" class="back-to-results">← Back to search results</a>
 	</div>
 
